# python-homework

./: README.md
.github/workflows/: pytest.yml  pytest2.yml
Project/: README.md
Project/accounts/: forms.py  urls.py  views.py
Project/accounts/templatetags/: __init__.py  translate_errors.py
Project/catalog/: models.py  urls.py  views.py
Project/catalog/migrations/: 0002_cart_cartitem_order_orderitem.py
Project/homework_08/: asgi.py  settings.py  urls.py
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile
homework_03/app/: app.py  pyproject.toml
homework_04/: __init__.py  jsonplaceholder_requests.py  main.py  requirements.txt
homework_04/models/: __init__.py  base.py  db.py  post.py  user.py
homework_05/: app.py  requirements.txt
homework_05/templates/: base.html  index.html
homework_05/templates/about/: index.html
homework_05/views/: about.py
homework_06/: Dockerfile  alembic.ini  app.py  config.py  docker-compose.yml  main.py  setup.sh
homework_06/migrations/versions/: 979a61a56700_.py
homework_06/models/: base.py  post.py  user.py
homework_06/templates/: base.html  index.html
homework_06/templates/posts/: add.html  details.html  list.html
homework_06/views/: posts.py  users.py
homework_07/catalog/: models.py
homework_07/homework_07/: asgi.py  settings.py  urls.py  wsgi.py
homework_08/: manage.py
homework_08/homework_08/: settings.py  wsgi.py
homework_09/: requirements.txt
homework_09/catalog/: tests.py  urls.py  views.py
homework_09/homework_08/: urls.py
(+21 files in other folders)
