[tool.poetry]
name = "FastAPIAPP"
version = "0.1.0"
description = "Env for FastAPI app"
authors = ["mnpetrova"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
